--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
-language: node_js
-node_js:
-  - '0.10'
-before_script:
-  - 'npm install -g bower grunt-cli'
-  - 'bower install'
+language: java
+jdk:
+  - oraclejdk8
+
