--- a/ui/.jshintrc
+++ b/ui/.jshintrc
@@ -21,6 +21,8 @@
   "globals": {
     "angular": false,
     "google": false,
+    "SockJS": false,
+    "Stomp": false,
     "_": false,
     "alert": false
   }
