--- a/ui/package.json
+++ b/ui/package.json
@@ -4,10 +4,11 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.1",
-    "grunt-cli": "~0.1.9",
-    "grunt-bower-task": "~0.4.0",
     "grunt-autoprefixer": "^0.7.3",
+    "grunt-bower-task": "~0.4.0",
+    "grunt-cli": "~0.1.9",
     "grunt-concurrent": "^0.5.0",
+    "grunt-connect-proxy": "~0.1.10",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
@@ -16,24 +17,25 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "~0.11.3",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
     "grunt-google-cdn": "^0.4.0",
+    "grunt-karma": "~0.8.3",
     "grunt-newer": "^0.7.0",
-    "grunt-ngmin": "^0.0.3",
+    "grunt-ng-annotate": "^0.3.0",
+    "grunt-ngdocs": "^0.2.4",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.3.0",
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
-    "grunt-karma": "~0.8.3",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma": "~0.12.19",
+    "karma": "~0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
     "karma-jasmine": "~0.1.5",
-    "grunt-contrib-less": "~0.11.3",
-    "grunt-connect-proxy": "~0.1.10"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "load-grunt-tasks": "^0.4.0",
+    "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
