--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
 		<repository>
 			<id>repo.spring.io.milestone</id>
 			<name>Spring Maven Milestone Repository</name>
-			<url>https://repo.spring.io/libs-milestone</url>
+			<url>https://repo.spring.io/libs-snapshot</url>
 		</repository>
 		<repository>
 			<id>clojars.org</id>
