--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.1.6.RELEASE</version>
+		<version>1.1.8.RELEASE</version>
 	</parent>
 
 	<groupId>com.hillert.botanic</groupId>
@@ -16,7 +16,7 @@
 	<name>botanic-ng</name>
 
 	<properties>
-		<spring-data-rest.version>2.2.0 RC1</spring-data-rest.version>
+		<spring-data-rest.version>2.2.0.RELEASE</spring-data-rest.version>
 	</properties>
 
 	<build>
