Fix Bower install

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 						</configuration>
 					</execution>
 					<execution>
+						<id>bower install</id>
+						<goals>
+							<goal>bower</goal>
+						</goals>
+					</execution>
+					<execution>
 						<id>gulp build</id>
 						<goals>
 							<goal>gulp</goal>
