--- a/ui/package.json
+++ b/ui/package.json
@@ -6,50 +6,51 @@
     "test": "gulp test"
   },
   "devDependencies": {
-    "gulp": "~3.9.0",
-    "gulp-autoprefixer": "~2.3.1",
-    "gulp-angular-templatecache": "~1.6.0",
+    "bower": "^1.6.5",
+    "browser-sync": "~2.7.12",
+    "browser-sync-spa": "~1.0.2",
+    "chalk": "~1.0.0",
+    "concat-stream": "~1.5.0",
     "del": "~1.2.0",
-    "lodash": "~3.9.3",
+    "gulp": "~3.9.0",
+    "gulp-angular-templatecache": "~1.6.0",
+    "gulp-autoprefixer": "~2.3.1",
+    "gulp-concat": "~2.5.2",
     "gulp-csso": "~1.0.0",
     "gulp-filter": "~2.0.2",
     "gulp-flatten": "~0.0.4",
+    "gulp-inject": "~1.3.1",
     "gulp-jshint": "~1.11.0",
+    "gulp-less": "~3.0.3",
     "gulp-load-plugins": "~0.10.0",
+    "gulp-minify-html": "~1.0.3",
+    "gulp-ng-annotate": "~1.0.0",
+    "gulp-protractor": "~1.0.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-replace": "~0.5.3",
+    "gulp-rev": "~5.0.0",
+    "gulp-rev-replace": "~0.4.2",
     "gulp-size": "~1.2.1",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-tslint": "~2.0.0",
+    "gulp-typescript": "~2.7.7",
     "gulp-uglify": "~1.2.0",
     "gulp-useref": "~1.2.0",
     "gulp-util": "~3.0.5",
-    "gulp-ng-annotate": "~1.0.0",
-    "gulp-replace": "~0.5.3",
-    "gulp-rename": "~1.2.2",
-    "gulp-rev": "~5.0.0",
-    "gulp-rev-replace": "~0.4.2",
-    "gulp-minify-html": "~1.0.3",
-    "gulp-inject": "~1.3.1",
-    "gulp-protractor": "~1.0.0",
-    "gulp-sourcemaps": "~1.5.2",
-    "gulp-less": "~3.0.3",
-    "gulp-typescript": "~2.7.7",
-    "gulp-tslint": "~2.0.0",
-    "gulp-concat": "~2.5.2",
-    "tsd": "~0.6.1",
+    "http-proxy-middleware": "~0.9.0",
+    "jshint-stylish": "~2.0.0",
+    "karma": "~0.12.36",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "~0.3.5",
+    "karma-ng-html2js-preprocessor": "~0.1.2",
+    "karma-phantomjs-launcher": "~0.2.0",
+    "lodash": "~3.9.3",
     "main-bower-files": "~2.8.0",
     "merge-stream": "~0.1.7",
-    "jshint-stylish": "~2.0.0",
-    "wiredep": "~2.2.2",
-    "karma": "~0.12.36",
-    "karma-jasmine": "~0.3.5",
-    "karma-phantomjs-launcher": "~0.2.0",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-ng-html2js-preprocessor": "~0.1.2",
-    "concat-stream": "~1.5.0",
     "require-dir": "~0.3.0",
-    "browser-sync": "~2.7.12",
-    "browser-sync-spa": "~1.0.2",
-    "http-proxy-middleware": "~0.9.0",
-    "chalk": "~1.0.0",
+    "tsd": "~0.6.1",
     "uglify-save-license": "~0.4.1",
+    "wiredep": "~2.2.2",
     "wrench": "~1.5.8"
   },
   "engines": {
