--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   application:
     name: botanic-ng
-
+  redis:
+    port: ${redisPort}
 server:
   port: 9000
 
@@ -9,3 +10,4 @@ logging:
   level:
     org.springframework: INFO
     org.springframework.web: INFO
+    com.hillert.botanic.config: INFO
