--- a/pom.xml
+++ b/pom.xml
@@ -163,9 +163,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>redis.embedded</groupId>
+			<groupId>com.github.kstyrc</groupId>
 			<artifactId>embedded-redis</artifactId>
-			<version>0.5</version>
+			<version>0.6</version>
 		</dependency>
 
 		<dependency>
