--- a/ui/package.json
+++ b/ui/package.json
@@ -1,59 +1,63 @@
 {
-  "name": "uiGulp",
-  "version": "0.0.0",
-  "dependencies": {},
-  "scripts": {
-    "test": "gulp test"
+  "name": "botanic-ng",
+  "version": "0.0.2",
+  "dependencies": {
+    "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
+    "angular-cookies": "^1.4.7",
+    "angular-file-upload": "^2.2.0",
+    "angular-google-maps": "^2.2.1",
+    "angular-masonry": "^0.13.0",
+    "angular-resource": "^1.4.7",
+    "angular-sanitize": "^1.4.7",
+    "angular-simple-logger": "^0.1.5",
+    "angular-touch": "^1.4.7",
+    "angular-ui-router": "^0.2.15",
+    "bootstrap": "^3.3.5",
+    "eventemitter": "^0.3.3",
+    "jquery": "^2.1.4",
+    "less": "^2.5.3",
+    "sockjs-client": "^1.0.3",
+    "stompjs": "^2.3.3"
   },
+  "description": "BotanicNG Demo Application",
+  "license": "Apache-2.0",
+  "repository": "https://github.com/ghillert/botanic-ng",
   "devDependencies": {
-    "bower": "^1.6.5",
-    "browser-sync": "~2.7.12",
-    "browser-sync-spa": "~1.0.2",
-    "chalk": "~1.0.0",
-    "concat-stream": "~1.5.0",
-    "del": "~1.2.0",
-    "gulp": "~3.9.0",
-    "gulp-angular-templatecache": "~1.6.0",
-    "gulp-autoprefixer": "~2.3.1",
-    "gulp-concat": "~2.5.2",
-    "gulp-csso": "~1.0.0",
-    "gulp-filter": "~2.0.2",
-    "gulp-flatten": "~0.0.4",
-    "gulp-inject": "~1.3.1",
-    "gulp-jshint": "~1.11.0",
-    "gulp-less": "~3.0.3",
-    "gulp-load-plugins": "~0.10.0",
-    "gulp-minify-html": "~1.0.3",
-    "gulp-ng-annotate": "~1.0.0",
-    "gulp-protractor": "~1.0.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-replace": "~0.5.3",
-    "gulp-rev": "~5.0.0",
-    "gulp-rev-replace": "~0.4.2",
-    "gulp-size": "~1.2.1",
-    "gulp-sourcemaps": "~1.5.2",
-    "gulp-tslint": "~2.0.0",
-    "gulp-typescript": "~2.7.7",
-    "gulp-uglify": "~1.2.0",
-    "gulp-useref": "~1.2.0",
-    "gulp-util": "~3.0.5",
-    "http-proxy-middleware": "~0.9.0",
-    "jshint-stylish": "~2.0.0",
-    "karma": "~0.12.36",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-jasmine": "~0.3.5",
-    "karma-ng-html2js-preprocessor": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.2.0",
-    "lodash": "~3.9.3",
-    "main-bower-files": "~2.8.0",
-    "merge-stream": "~0.1.7",
-    "require-dir": "~0.3.0",
-    "tsd": "~0.6.1",
-    "uglify-save-license": "~0.4.1",
-    "wiredep": "~2.2.2",
-    "wrench": "~1.5.8"
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "chai": "^3.4.1",
+    "css-loader": "^0.23.0",
+    "expose-loader": "^0.7.0",
+    "file-loader": "^0.8.4",
+    "html-loader": "^0.4.0",
+    "imports-loader": "^0.6.5",
+    "jshint": "^2.8.0",
+    "jshint-loader": "^0.8.3",
+    "jshint-loader-stylish": "^1.0.1",
+    "jshint-stylish": "^2.1.0",
+    "json-loader": "^0.5.4",
+    "karma": "~0.13.15",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-jasmine": "~0.3.6",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "~0.2.1",
+    "karma-webpack": "^1.7.0",
+    "less-loader": "^2.2.2",
+    "mocha": "^2.3.4",
+    "ng-annotate-loader": "0.0.10",
+    "raw-loader": "^0.5.1",
+    "stats-webpack-plugin": "^0.2.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack-dev-server": "^1.12.1"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "scripts": {
+    "build": "NODE_ENV=production webpack --config webpack.config.js",
+    "start": "webpack-dev-server --devtool eval --config webpack.config.js --progress --colors --hot --content-base src/app --port 3000"
   }
 }
